# rtl

./: .gitignore  AGENTS.md  README.md  opencode.json  pyproject.toml
.opencode/prompts/: converter.md  generator.md  verifier.md
configs/: datasets.json  opentitan_ip_docs_tasks.json  opentitan_tasks.json  riscv_hardware_specs_tasks.json  rtllm_v1_1_interfaces.json  task_quality_rubric.json  verifier_smoke.json
docs/: datasets.md  engineering-log.md  opentitan_public_completeness_audit.md  project-plan.md  task-format.md  task-quality-review.md  task-quality-rubric.md
scripts/: convert_all_avip_specs.py  fetch_seed_datasets.sh  repair_old_avip_docs.py
src/rtl_training/: __init__.py  batch.py  config.py  datasets.py  forencich_oracle.py  ibex_oracle.py  interface_contracts.py  micro_arch_contracts.py  notsotiny_oracle.py  opencode_runtime.py  opentitan_oracle.py  oracle.py  pdf_convert.py  public_spec_profiles.py  pulp_oracle.py  reward.py  rl.py  runtime.py  scoreboard.py  shared_sources.py  task_quality.py  task_store.py  timeout_policy.py  veer_oracle.py  workspace.py  (+2 more)
tests/: test_avip_docs.py  test_batch.py  test_config.py  test_datasets.py  test_doc_assets.py  test_interface_contracts.py  test_micro_arch_contracts.py  test_opencode_runtime.py  test_opentitan_oracle.py  test_opentitan_public_completeness.py  test_oracle.py  test_pdf_convert.py  test_reward.py  test_rl.py  test_runtime.py  test_scoreboard.py  test_shared_sources.py  test_skills.py  test_task_quality.py  test_task_store.py  test_timeout_policy.py  test_verifier_benchmark.py  test_workspace.py
(+232 files in other folders)
