[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "rtl-training"
version = "0.1.0"
description = "OpenCode-centered runtime for agentic RTL generation and hidden-oracle validation."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.2"]

[tool.setuptools]
package-dir = {"" = "src", "task_library" = "task_library"}

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["rtl_training*", "task_library*"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
